
* Tree-shape conflicts can be resolved by providing ``--take-this`` and
  ``--take-other`` to the ``bzr resolve`` command. Just marking the conflict
  as resolved is still accessible via the ``--done`` default action.
  (Vincent Ladeuil)

Bug Fixes
*********

* Avoid infinite recursion when probing for apport.
  (Vincent Ladeuil, #516934)

Testing
*******

* Stop sending apport crash files to ``.cache`` in the directory from
  which ``bzr selftest`` was run.  (Martin Pool, #422350)

bzr 2.1.0 (not released yet)
############################

:Codename: 
:2.1.0: 

Bug Fixes
*********
* Network transfer amounts and rates are now displayed in SI units according
  to the Ubuntu Units Policy, https://wiki.ubuntu.com/UnitsPolicy.
  (Gordon Tyler, #514399)

* Fix "AttributeError in Inter1and2Helper" during fetch.
  (Martin Pool, #513432)

* Fix ``log`` to better check ancestors even if merged revisions are involved.
  (Vincent Ladeuil, #476293)

* Give a better error message when doing ``bzr bind`` in an already bound
  branch.  (Neil Martinsen-Burrell, #513063)

* Set the mtime of files exported to a directory by ``bzr export`` all to
  the same value to avoid confusing ``make`` and other date-based build
  systems. (Robert Collins, #515631)

Improvements
************

Documentation
*************

API Changes
***********

* ``Repository.deserialise_inventory`` has been renamed to 
  ``Repository._deserialise_inventory`` to indicate it is private.
  (Jelmer Vernooij)

* ``Repository.get_inventory_xml`` has been renamed to 
  ``Repository._get_inventory_xml`` to indicate it is private. 
  (Jelmer Vernooij)

* ``Repository.serialise_inventory`` has been renamed to 
  ``Repository._serialise_inventory`` to indicate it is private.

Internals
*********

Testing
*******
* Using the ``bzrlib.chk_map`` module from within multiple threads at the
  same time was broken due to race conditions with a module level page